--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./01-gallery.js"></script>
+    <script type="module" src="./02-video.js"></script>
+    <script type="module" src="./03-feedback.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/01-gallery.html"></include>
+    <include src="./partials/02-video.html"></include>
+    <include src="./partials/03-feedback.html"></include>
   </body>
 </html>
