--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../sass/_01-gallery.scss" />
     <title>SimpleLightbox library</title>
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/01-gallery.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -13,6 +14,6 @@
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
 
-    <script src="./01-gallery.js" type="module"></script>
+    <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
