--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../sass/_03-feedback.scss" />
     <title>Feedback form</title>
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/03-feedback.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -22,6 +23,6 @@
       <button type="submit">Submit</button>
     </form>
 
-    <script type="module" src="./03-feedback.js"></script>
+    <script src="js/03-feedback.js" type="module"></script>
   </body>
 </html>
