--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-    <script type="module" src="./01-gallery.js"></script>
-    <script type="module" src="./02-video.js"></script>
-    <script type="module" src="./03-feedback.js"></script>
+    <title>Homework 8</title>
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/01-gallery.html"></include>
-    <include src="./partials/02-video.html"></include>
-    <include src="./partials/03-feedback.html"></include>
+    <ul>
+      <li><a href="01-gallery.html">Image gallery</a></li>
+      <li><a href="02-video.html">Video playback</a></li>
+      <li><a href="03-feedback.html">Feedback form</a></li>
+    </ul>
   </body>
 </html>
