--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -7,6 +7,11 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/01-gallery.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.7.3/simple-lightbox.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.7.3/simple-lightbox.min.js"></script>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
