--- a/src/02-video.html
+++ b/src/02-video.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video playback</title>
     <link rel="stylesheet" href="css/common.css" />
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
+
+</script>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
